<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bil1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="Bilangan 1"
        android:inputType="numberDecimal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/bilangan_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bilangan_1"
        app:layout_constraintVertical_bias="0.476" />

    <EditText
        android:id="@+id/bil2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Bilangan 2"
        android:inputType="numberDecimal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/bilangan_2"
        app:layout_constraintEnd_toEndOf="@+id/bil1"
        app:layout_constraintStart_toStartOf="@+id/bil1"
        app:layout_constraintTop_toTopOf="@+id/bilangan_2" />

    <TextView
        android:id="@+id/operasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/operasi"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/op"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/bilangan_2"
        app:layout_constraintTop_toBottomOf="@+id/bilangan_2"
        app:layout_constraintVertical_bias="0.146" />

    <TextView
        android:id="@+id/bilangan_1"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:text="@string/bilangan_1"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bilangan_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/bilangan_2"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/bilangan_1"
        app:layout_constraintStart_toStartOf="@+id/bilangan_1"
        app:layout_constraintTop_toBottomOf="@+id/bilangan_1" />

    <TextView
        android:id="@+id/output"
        android:layout_width="0dp"
        android:layout_height="23dp"
        android:textColor="@android:color/holo_green_light"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/op"
        app:layout_constraintStart_toStartOf="@+id/op"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:text="@string/output"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/operasi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/operasi" />

    <Spinner
        android:id="@+id/op"
        android:layout_width="0dp"
        android:layout_height="27dp"
        android:layout_marginBottom="152dp"
        android:dropDownWidth="match_parent"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/operasi"
        app:layout_constraintEnd_toEndOf="@+id/bil2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/bil2"
        app:layout_constraintTop_toTopOf="@+id/operasi"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/total"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/output" />

</android.support.constraint.ConstraintLayout>